--- a/src/Shop.css
+++ b/src/Shop.css
@@ -13,6 +13,11 @@ body {
     font-size: 16px;
 }
 
+.bulba-green {
+    background-color: #E0F2B6;
+    border-color: #31aa31;
+}
+
 * {
-    background-color: aquamarine; /*testing a contrasting color to see if it shows up*/
+    background-color: #edf7f7;
 }
